removed the generic static redirect and fixed the redirect on the register pages title

--- a/README
+++ b/README
@@ -5,5 +5,6 @@ A small Google App Engine app for tracking clubs and members at Monash.
 Things to work on:
 -Events
 -Passwords/Sessions
+-The ability to delete/edit things. At the moment you can only create them.
 
-My apologies for the disgusting code, this is my first Python app and it's a fair jump from my native Obj-C. Note their might be people working on this app in both the science and the wired facultys, so if you post someone about it on either facebook group, some people might miss it.
+My apologies for the disgusting code, this is my first Python app and it's a fair jump from my native Obj-C. Note their might be people working on this app in both the science and the IT faculty, so if you post someone about it on either facebook group, some people might miss it.
